<resources>
    <string name="app_name">Ahoy</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="label_sign_in">SignIn</string>
    <string name="label_sign_up">SignUp</string>
    <string name="label_password_recovery">Password recovery</string>
    <string name="label_login">Login</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_repeated_password">Repeat password</string>
    <string name="label_cancel">Cancel</string>
    <string name="hint_login">Login</string>
    <string name="email_password_reset_sent">Email to reset password successfully sent</string>
    <string name="label_retry">Retry</string>
    <string name="label_default_error">Ups, something wrong happened</string>
    <string name="title_top_topics">Top topics</string>
    <string name="title_latest_topics">Latest topics</string>
    <string name="label_log_out">Log out</string>
    <string name="Moderator">Moderator</string>
    <string name="label_private_messages">Private messages</string>
    <string name="label_last_connection">Last connection</string>
    <string name="label_name">Name</string>
    <string name="label_nickname">Nickname</string>
    <string name="minutes_zero">Right now</string>
    <string name="navigation_drawer_open">Open topic filters</string>
    <string name="navigation_drawer_close">Close topic filters</string>
    <plurals name="years">
        <item quantity="one">%d year</item>
        <item quantity="other">%d years</item>
    </plurals>
    <plurals name="months">
        <item quantity="one">%d month</item>
        <item quantity="other">%d months</item>
    </plurals>
    <plurals name="days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
